--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,10 @@ main: net.afyer.afyshell.AfyShell
 author: Nipuru
 api-version: 1.17
 depend: [ AfyLib ]
+commands:
+  afyshell:
+    aliases:
+      - sh
+      - ash
+      - shell
+    description: AfyShell Base Command
